--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Diffusion Reaction Simulation</title>
-  <meta name="description" content="Diffusion Reaction Simulation using the Gray-Scott model">
+  <title>Reaction-Diffusion Simulation</title>
+  <meta name="description" content="Reaction-Diffusion simulation using the Gray-Scott model">
 
   <style>
     canvas {
